# sft-control

./: .gitignore  CLAUDE.md  PLAN.md  WRITEUP.md  pyproject.toml  user_code.py
checkpoints/: grpo-final.json  grpo-step-25.json  grpo-step-50.json  grpo-step-75.json  registry.json  rl-fix-golden-v3-final.json  rl-fix-golden-v3-step-25.json  rl-fix-golden-v3-step-50.json  rl-fix-golden-v3-step-75.json  rl-fix-trusted-v3-final.json  rl-fix-trusted-v3-step-25.json  rl-fix-trusted-v3-step-50.json  rl-fix-trusted-v3-step-75.json
checkpoints/grpo-8b-instruct-ppo-kl-v2/: grpo-final.json  grpo-step-100.json  grpo-step-150.json  grpo-step-200.json  grpo-step-50.json
checkpoints/grpo-8b-ppo-v3/: grpo-final.json  grpo-step-100.json  grpo-step-150.json  (+2 more)
data/: filter_results_llama-1b.json  filter_results_qwen3-0.6b.json  filter_results_qwen3-1.7b.json  filter_results_qwen3-4b-dashscope.json  filter_results_qwen3-4b.json  filter_results_qwen35-27b.json  filter_results_sonnet.json  filter_results_sonnet_batch2.json  filtered_dataset.json  leetcode_test_loophole.jsonl  sonnet_correct_problems.json
docs/: CHECKPOINT_GUIDE.md  INTERVENTION_BENCHMARKS.md
references/: Steering RL Training: Benchmarking Interventions Against Reward Hacking  Supervised fine-tuning as a method of training-based control.docx
results/: gpt-oss-20b-base_eval.json
scripts/: diagnose_ppo_logprobs.py  eval_model.py  filter_eval_model.py  filter_sonnet.py  list_checkpoints.py  plot_intervention_curves.py  plot_interventions.py  plot_stacked_area.py  plot_training_runs.py  run_baseline_single.py  run_gpt_ab.sh  train_hacking.py  train_rl_fix.py  train_sft_fix.py
src/: analysis.py  config.py  data_loader.py  eval_utils.py  filter_sonnet_batch2.py  grpo_trainer.py  rewards.py
tests/: test_ppo_loss.py
(+25 files in other folders)
